Made segues to skills

--- a/Skill Tracker/StoryBoards/HomePageStoryboard.storyboard
+++ b/Skill Tracker/StoryBoards/HomePageStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5tz-vS-Ptf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -7,22 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="x8O-1r-ttI">
-            <objects>
-                <navigationController id="5tz-vS-Ptf" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YKE-9j-ZZq">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="vy6-Ed-Qyy" kind="relationship" relationship="rootViewController" id="50C-g9-YHj"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="82T-Gd-9e1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1920" y="106"/>
-        </scene>
         <!--Home Page View Controller-->
         <scene sceneID="A5u-4c-Fw3">
             <objects>
@@ -96,6 +80,7 @@
                                 <state key="normal" title="Create new skill"/>
                                 <connections>
                                     <action selector="newSkill:" destination="vy6-Ed-Qyy" eventType="touchUpInside" id="eBB-CW-ivq"/>
+                                    <segue destination="D1f-jF-3qr" kind="show" identifier="goToCreateSkill" id="bAf-ez-Zt7"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -106,28 +91,11 @@
                     <connections>
                         <outlet property="tableView" destination="kp1-Ku-P7r" id="vTR-he-9gn"/>
                         <outlet property="theButton" destination="3tM-9g-Ld0" id="6PB-iK-iZK"/>
-                        <segue destination="C1Q-dQ-Cz9" kind="show" identifier="goToCreateSkill" id="t6e-gs-RF4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LWO-8z-KAF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2807.2463768115945" y="105.80357142857143"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Ymx-op-7l1">
-            <objects>
-                <viewController id="C1Q-dQ-Cz9" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3WQ-9e-mRM">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="Bq6-qs-Qsg"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="wiL-aV-jwe"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W7r-TK-1qL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3552" y="-314"/>
+            <point key="canvasLocation" x="3717.3913043478265" y="105.80357142857143"/>
         </scene>
         <!--CreateNewSkillViewController-->
         <scene sceneID="nVq-It-zBv">
@@ -137,7 +105,25 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pQC-YQ-rd9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3552.898550724638" y="68.973214285714278"/>
+            <point key="canvasLocation" x="4463.04347826087" y="68.303571428571431"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rtg-hc-CVh">
+            <objects>
+                <navigationController storyboardIdentifier="homeNavController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="L0A-UH-qO7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Cv7-e6-hja">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vy6-Ed-Qyy" kind="relationship" relationship="rootViewController" id="ruS-w9-6Pa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="06W-MA-FxF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2807.2463768115945" y="105.80357142857143"/>
         </scene>
     </scenes>
 </document>
